--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Test data
+test/auth.json
+
+# Dependency directories
 node_modules/
