--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "engines": {
     "das-keyboard-q": "3.1.0"
   },
+  "scripts": {
+    "test": "mocha"
+  },
   "readMeUrl": "README.md",
   "qConfig": {
     "geometry": {
@@ -46,5 +49,8 @@
   "dependencies": {
     "daskeyboard-applet": "^2.10.12",
     "request-promise": "^4.2.2"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0"
   }
 }
