--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "daskeyboard-applet--travis-build-info",
-  "displayName": "Travis build info",
+  "name": "daskeyboard-applet--travis",
+  "displayName": "Travis",
   "version": "1.0.1",
   "publisher": "Das Keyboard",
   "longDescription": "Get Travis build status alerts directly on a Das Keyboard Q keyboard. Requires a Travis account and the token linked to this account.",
   "icon": "assets/icon.png",
-  "description": "Turn keys green, orange or red depending on your Travis build status",
+  "description": "Displays Travis build status.",
   "main": "index.js",
   "authorName": "Das Keyboard",
   "authorUrl": "https://twitter.com/daskeyboard",
