--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "daskeyboard-applet--travis",
-  "displayName": "Travis",
-  "version": "1.0.2",
+  "name": "daskeyboard-applet--travis-ci",
+  "displayName": "Travis CI",
+  "version": "1.0.3",
   "publisher": "Das Keyboard",
-  "longDescription": "Get Travis build status alerts directly on a Das Keyboard Q keyboard. Requires a Travis account and the token linked to this account.",
+  "longDescription": "Get Travis CI build status alerts directly on a Das Keyboard Q keyboard. Requires a Travis CI account and the token linked to this account.",
   "icon": "assets/icon.png",
-  "description": "Displays Travis build status.",
+  "description": "Displays Travis CI build status.",
   "main": "index.js",
   "authorName": "Das Keyboard",
   "authorUrl": "https://twitter.com/daskeyboard",
