Added question to select the notification effect.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,15 @@
         "controlType": "dropdown",
         "dynamic": true,
         "options": []
+      },
+      {
+        "key": "effect",
+        "label": "Select an effect when getting a failed state",
+        "help": "",
+        "required": true,
+        "order": 2,
+        "controlType": "effect",
+        "value": "BLINK"
       }
     ]
   },
