Revert "Updated effect question sentence."
This reverts commit 038e4e37e3e4867517747c5e3abde647283d8bfe.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       },
       {
         "key": "effect",
-        "label": "Select a notification effect for failed builds",
+        "label": "Select an effect when getting a failed state",
         "help": "",
         "required": true,
         "order": 2,
